--- a/src/components/services_contacts/Contacts.css
+++ b/src/components/services_contacts/Contacts.css
@@ -63,7 +63,9 @@
 .bgGray {
   background-color: #eeeeee;
 }
-
+.textBold {
+  font-weight: 500;
+}
 /* @media screen and (max-width: 575px) {
   .contacts .shopDetails .shopName {
     font-size: 1rem;
